--- a/V4_player_ids.ipynb
+++ b/V4_player_ids.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,12 +20,13 @@
     "from statsapi import player_stats\n",
     "from pybaseball import playerid_lookup, batting_stats_range, pitching_stats_range, playerid_reverse_lookup\n",
     "from datetime import datetime\n",
-    "import csv"
+    "import csv\n",
+    "import pprint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "batting = batting_stats_range(start_date, end_date)\n",
-    "pitching = pitching_stats_range(start_date, end_date)\n"
+    "pitching = pitching_stats_range(start_date, end_date)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_14648\\3656683846.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_14648\\2396604167.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -69,19 +70,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gathering player lookup table. This may take a moment.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_14648\\3656683846.py:17: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  pitcher_ids['key_bbref'] = None\n"
+      "No BBref ID found for mlbID: 669208, Ryan Bliss (Batter)\n",
+      "No BBref ID found for mlbID: 676113, Zach DeLoach (Batter)\n",
+      "No BBref ID found for mlbID: 671286, Johnathan Rodr\\xc3\\xadguez (Batter)\n",
+      "No BBref ID found for mlbID: 676679, Luis V\\xc3\\xa1zquez (Batter)\n",
+      "No BBref ID found for mlbID: 642520, Gerson Garabito (Pitcher)\n",
+      "No BBref ID found for mlbID: 687863, Porter Hodge (Pitcher)\n",
+      "No BBref ID found for mlbID: 672552, Jack O\\'Loughlin (Pitcher)\n"
      ]
     }
    ],
@@ -92,31 +87,46 @@
     "\n",
     "# Loop through each player ID and fetch their bbref ID\n",
     "for idx, mlb_id in batter_ids.iterrows():\n",
-    "    # Fetch the data using the player ID\n",
-    "    data = playerid_reverse_lookup([mlb_id['mlbID']], key_type='mlbam')\n",
-    "    if not data.empty:\n",
-    "        bbref = data.at[0, 'key_bbref']  # Extract the bbref ID from the returned DataFrame\n",
-    "        batter_ids.at[idx, 'key_bbref'] = bbref  # Assign the bbref ID to the respective row\n",
+    "\n",
+    "    try:\n",
+    "        # Fetch the data using the player ID\n",
+    "        batterdata = playerid_reverse_lookup([mlb_id['mlbID']], key_type='mlbam')\n",
+    "        if not batterdata.empty:\n",
+    "            bbref = batterdata.at[0, 'key_bbref']  # Extract the bbref ID from the returned DataFrame\n",
+    "            batter_ids.at[idx, 'key_bbref'] = bbref  # Assign the bbref ID to the respective row\n",
+    "        else:\n",
+    "                print(f\"No BBref ID found for mlbID: {mlb_id['mlbID']}, {mlb_id['Name']} (Batter)\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing mlbID: {mlb_id['mlbID']}, Error: {e}\")\n",
     "\n",
     "\n",
+    "# Ensure mlbID is converted to integers\n",
+    "pitching['mlbID'] = pitching['mlbID'].astype(int)\n",
     "\n",
-    "pitcher_ids = pitching[['Name', 'Tm', 'mlbID']]\n",
     "# Add an empty column 'key_bbref' initialized with None\n",
+    "pitcher_ids = pitching[['Name', 'Tm', 'mlbID']].copy()\n",
     "pitcher_ids['key_bbref'] = None\n",
     "\n",
     "# Loop through each player ID and fetch their bbref ID\n",
-    "for idx, mlb_id in batter_ids.iterrows():\n",
-    "    # Fetch the data using the player ID\n",
-    "    data = playerid_reverse_lookup([mlb_id['mlbID']], key_type='mlbam')\n",
-    "    if not data.empty:\n",
-    "        bbref = data.at[0, 'key_bbref']  # Extract the bbref ID from the returned DataFrame\n",
-    "        pitcher_ids.at[idx, 'key_bbref'] = bbref  # Assign the bbref ID to the respective row\n",
-    "\n"
+    "for idx, row in pitcher_ids.iterrows():\n",
+    "    mlb_id = row['mlbID']\n",
+    "    \n",
+    "    try:\n",
+    "        # Fetch the data using the player ID\n",
+    "        pitcherdata = playerid_reverse_lookup([mlb_id], key_type='mlbam')\n",
+    "        \n",
+    "        if not pitcherdata.empty:\n",
+    "            bbref = pitcherdata.iloc[0]['key_bbref']  # Extract the bbref ID from the returned DataFrame\n",
+    "            pitcher_ids.at[idx, 'key_bbref'] = bbref  # Assign the bbref ID to the respective row\n",
+    "        else:\n",
+    "            print(f\"No BBref ID found for mlbID: {mlb_id}, {row['Name']} (Pitcher)\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing mlbID: {mlb_id}, Error: {e}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
