working system, but individual files still

--- a/V4_game_pks.ipynb
+++ b/V4_game_pks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +25,9 @@
     "end_date = today.strftime('%Y-%m-%d')\n",
     "end_date = '2024-05-24'\n",
     "\n",
-    "season = today.year"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "season = today.year\n",
+    "\n",
+    "\n",
     "def get_game_pks():\n",
     "    \n",
     "    desired_seasons = [2021, 2022, 2023, 2024] # Add Desired Seasons Here\n",
@@ -71,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
