--- a/V4_gamelogs.ipynb
+++ b/V4_gamelogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -85,14 +85,14 @@
     "        return ''\n",
     "\n",
     "# Read the game_pks.csv file\n",
-    "game_pks_df = pd.read_csv('game_pks.csv')\n",
+    "game_pks_df = pd.read_csv('game_pks.csv').tail(50) ###############################################  Pulls / Rewrites GAMELOGS for last 50 games\n",
     "processed_games = 0\n",
     "\n",
     "for gamepk in game_pks_df['game_id']:\n",
     "\n",
     "    filename = f'gamelogs/game_{gamepk}.csv'\n",
-    "    if os.path.exists(filename):\n",
-    "        continue  # Skip processing if the file already exists\n",
+    "    #if os.path.exists(filename):\n",
+    "    #    continue  # Skip processing if the file already exists\n",
     "    \n",
     "    boxscore = boxscore_data(gamePk=gamepk)\n",
     "\n",
