--- a/V4_player_ids.ipynb
+++ b/V4_player_ids.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,14 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_10932\\2396604167.py:3: SettingWithCopyWarning: \n",
+      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_22736\\2396604167.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -70,6 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Gathering player lookup table. This may take a moment.\n",
       "No BBref ID found for mlbID: 669208, Ryan Bliss (Batter)\n",
       "No BBref ID found for mlbID: 670092, Trenton Brooks (Batter)\n",
       "No BBref ID found for mlbID: 667428, Grant Koch (Batter)\n",
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
