--- a/V4_stats_gamelogs.ipynb
+++ b/V4_stats_gamelogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -147,261 +147,20 @@
       "Processed and saved game stats for game 747114 to gamelogs/gamestats_747114.csv\n",
       "Processed and saved game stats for game 746225 to gamelogs/gamestats_746225.csv\n",
       "Processed and saved game stats for game 746877 to gamelogs/gamestats_746877.csv\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
-      "missing bbrefID for game 745574\n",
       "Processed and saved game stats for game 745574 to gamelogs/gamestats_745574.csv\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
-      "missing bbrefID for game 747032\n",
       "Processed and saved game stats for game 747032 to gamelogs/gamestats_747032.csv\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
-      "missing bbrefID for game 744928\n",
       "Processed and saved game stats for game 744928 to gamelogs/gamestats_744928.csv\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
-      "missing bbrefID for game 746955\n",
       "Processed and saved game stats for game 746955 to gamelogs/gamestats_746955.csv\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
-      "missing bbrefID for game 746635\n",
       "Processed and saved game stats for game 746635 to gamelogs/gamestats_746635.csv\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
-      "missing bbrefID for game 745820\n",
       "Processed and saved game stats for game 745820 to gamelogs/gamestats_745820.csv\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
-      "missing bbrefID for game 746059\n",
       "Processed and saved game stats for game 746059 to gamelogs/gamestats_746059.csv\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
-      "missing bbrefID for game 747116\n",
       "Processed and saved game stats for game 747116 to gamelogs/gamestats_747116.csv\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
-      "missing bbrefID for game 746303\n",
+      "Stats file for loftini01 not found (pitching).\n",
       "Processed and saved game stats for game 746303 to gamelogs/gamestats_746303.csv\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
-      "missing bbrefID for game 746387\n",
       "Processed and saved game stats for game 746387 to gamelogs/gamestats_746387.csv\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
-      "missing bbrefID for game 745983\n",
       "Processed and saved game stats for game 745983 to gamelogs/gamestats_745983.csv\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
-      "missing bbrefID for game 746140\n",
       "Processed and saved game stats for game 746140 to gamelogs/gamestats_746140.csv\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
-      "missing bbrefID for game 745253\n",
       "Processed and saved game stats for game 745253 to gamelogs/gamestats_745253.csv\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
-      "missing bbrefID for game 745331\n",
       "missing bbrefID for game 745331\n",
       "Processed and saved game stats for game 745331 to gamelogs/gamestats_745331.csv\n"
      ]
