changed files to daily pull format

--- a/V4_gamelogs2.ipynb
+++ b/V4_gamelogs2.ipynb
@@ -972,7 +972,7 @@
     "# Load game_pks.csv to get team names and IDs\n",
     "game_pks_df = pd.read_csv('game_pks.csv')\n",
     "\n",
-    "# Mapping of team 3-digit IDs to oddshark 5-digit IDs\n",
+    "# Mapping of team 3-digit IDs to oddshark 5-digit IDs \n",
     "team_to_oddshark_id = {\n",
     "    120: 27017, 146: 27022, 139: 27003, 144: 27009, 140: 27002, 117: 27023,\n",
     "    135: 26996, 143: 26995, 110: 27008, 136: 27011, 121: 27014, 109: 27007,\n",
@@ -1139,8 +1139,8 @@
     "\n",
     "all_games = pd.read_csv('game_pks.csv').game_id\n",
     "# Example usage\n",
-    "gamepks = all_games[1820:]  # Example gamepk list - use .tail(50) in the future\n",
-    "count = 1820\n",
+    "gamepks = all_games.tail(50)\n",
+    "count = 0\n",
     "for gamepk in gamepks:\n",
     "    save_game_to_csv(gamepk)\n",
     "    count += 1\n",
