--- a/oddsdata.ipynb
+++ b/oddsdata.ipynb
@@ -12731,7 +12731,7 @@
     "\n",
     "def update_gamelogs_with_over_under(game_pks_file, gamelogs_folder):\n",
     "    game_pks_df = pd.read_csv(game_pks_file)\n",
-    "    game_pks = game_pks_df['game_id']    # ADD .tail(50) in the future\n",
+    "    game_pks = game_pks_df['game_id'].tail(50)\n",
     "    duplicates = []\n",
     "    \n",
     "    for game_id in game_pks:\n",
