bullpen now only goes up to 13

--- a/model/predict.ipynb
+++ b/model/predict.ipynb
@@ -9,35 +9,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Game 82: Under the runline\n",
-      "Game 83: Under the runline\n",
-      "Game 84: Over the runline\n",
-      "Game 85: Under the runline\n",
+      "Game 85: Over the runline\n",
       "Game 86: Under the runline\n",
-      "Game 87: Under the runline\n",
-      "Game 88: Over the runline\n",
+      "Game 87: Over the runline\n",
+      "Game 88: Under the runline\n",
       "Game 89: Under the runline\n",
       "Game 90: Over the runline\n",
-      "Game 91: Over the runline\n",
+      "Game 91: Under the runline\n",
       "Game 92: Over the runline\n",
-      "Game 93: Under the runline\n",
-      "Game 94: Under the runline\n",
-      "Game 95: Under the runline\n",
-      "Game 96: Over the runline\n"
+      "Game 93: Over the runline\n",
+      "Game 94: Over the runline\n",
+      "Game 95: Over the runline\n",
+      "Game 96: Under the runline\n",
+      "Game 97: Over the runline\n",
+      "Game 98: Over the runline\n",
+      "Game 99: Under the runline\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_14400\\2153317967.py:40: SettingWithCopyWarning: \n",
+      "C:\\Users\\kesse\\AppData\\Local\\Temp\\ipykernel_6600\\2153317967.py:40: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
