--- a/oddsdata.ipynb
+++ b/oddsdata.ipynb
@@ -2,115 +2,226 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Updated gamelogs/game_746282.csv with over/under runline.\n",
+      "Updated gamelogs/game_746122.csv with over/under runline.\n",
       "1\n",
-      "Updated gamelogs/game_746537.csv with over/under runline.\n",
+      "Updated gamelogs/game_745723.csv with over/under runline.\n",
       "2\n",
-      "Updated gamelogs/game_745647.csv with over/under runline.\n",
+      "Updated gamelogs/game_745480.csv with over/under runline.\n",
       "3\n",
-      "Updated gamelogs/game_745240.csv with over/under runline.\n",
+      "Updated gamelogs/game_744833.csv with over/under runline.\n",
       "4\n",
-      "Updated gamelogs/game_746133.csv with over/under runline.\n",
+      "Updated gamelogs/game_746455.csv with over/under runline.\n",
       "5\n",
-      "Updated gamelogs/game_745487.csv with over/under runline.\n",
+      "Updated gamelogs/game_746692.csv with over/under runline.\n",
       "6\n",
-      "Updated gamelogs/game_746617.csv with over/under runline.\n",
+      "Updated gamelogs/game_746771.csv with over/under runline.\n",
       "7\n",
-      "Updated gamelogs/game_746045.csv with over/under runline.\n",
+      "Updated gamelogs/game_746208.csv with over/under runline.\n",
       "8\n",
-      "Updated gamelogs/game_744837.csv with over/under runline.\n",
+      "Updated gamelogs/game_747181.csv with over/under runline.\n",
       "9\n",
-      "Updated gamelogs/game_745728.csv with over/under runline.\n",
+      "Updated gamelogs/game_747014.csv with over/under runline.\n",
       "10\n",
-      "Updated gamelogs/game_744915.csv with over/under runline.\n",
+      "Updated gamelogs/game_746451.csv with over/under runline.\n",
       "11\n",
-      "Updated gamelogs/game_747100.csv with over/under runline.\n",
+      "Updated gamelogs/game_745557.csv with over/under runline.\n",
       "12\n",
-      "Updated gamelogs/game_744998.csv with over/under runline.\n",
+      "Updated gamelogs/game_745074.csv with over/under runline.\n",
       "13\n",
-      "Updated gamelogs/game_746858.csv with over/under runline.\n",
+      "Updated gamelogs/game_746690.csv with over/under runline.\n",
       "14\n",
-      "Updated gamelogs/game_746283.csv with over/under runline.\n",
+      "Updated gamelogs/game_745803.csv with over/under runline.\n",
       "15\n",
-      "Updated gamelogs/game_745888.csv with over/under runline.\n",
+      "Updated gamelogs/game_746937.csv with over/under runline.\n",
       "16\n",
-      "Updated gamelogs/game_746534.csv with over/under runline.\n",
+      "Updated gamelogs/game_746368.csv with over/under runline.\n",
       "17\n",
-      "Updated gamelogs/game_745643.csv with over/under runline.\n",
+      "Updated gamelogs/game_745968.csv with over/under runline.\n",
       "18\n",
-      "Updated gamelogs/game_746128.csv with over/under runline.\n",
+      "Updated gamelogs/game_746206.csv with over/under runline.\n",
       "19\n",
-      "Updated gamelogs/game_745234.csv with over/under runline.\n",
+      "Updated gamelogs/game_745393.csv with over/under runline.\n",
       "20\n",
-      "Updated gamelogs/game_744834.csv with over/under runline.\n",
+      "Updated gamelogs/game_747180.csv with over/under runline.\n",
       "21\n",
-      "Updated gamelogs/game_745484.csv with over/under runline.\n",
+      "Updated gamelogs/game_745316.csv with over/under runline.\n",
       "22\n",
-      "Updated gamelogs/game_745726.csv with over/under runline.\n",
+      "BAD - No matching date found for team 27019 on date 2024-07-09 00:00:00\n",
+      "Updated gamelogs/game_745155.csv with over/under runline.\n",
       "23\n",
-      "Updated gamelogs/game_744912.csv with over/under runline.\n",
+      "BAD - No matching date found for team 27018 on date 2024-07-09 00:00:00\n",
+      "Updated gamelogs/game_746773.csv with over/under runline.\n",
       "24\n",
-      "Updated gamelogs/game_745890.csv with over/under runline.\n",
+      "BAD - No matching date found for team 27019 on date 2024-07-09 00:00:00\n",
+      "Updated gamelogs/game_745155.csv with over/under runline.\n",
       "25\n",
-      "Updated gamelogs/game_746619.csv with over/under runline.\n",
+      "DOUBLEHEADER on 2024-07-10 00:00:00\n",
+      "Updated gamelogs/game_745156.csv with over/under runline.\n",
       "26\n",
-      "Updated gamelogs/game_746043.csv with over/under runline.\n",
+      "DOUBLEHEADER on 2024-07-10 00:00:00\n",
+      "Updated gamelogs/game_746772.csv with over/under runline.\n",
       "27\n",
-      "Updated gamelogs/game_746857.csv with over/under runline.\n",
+      "BAD - No matching date found for team 27018 on date 2024-07-09 00:00:00\n",
+      "Updated gamelogs/game_746773.csv with over/under runline.\n",
       "28\n",
-      "Updated gamelogs/game_744996.csv with over/under runline.\n",
+      "Updated gamelogs/game_747015.csv with over/under runline.\n",
       "29\n",
-      "Updated gamelogs/game_745641.csv with over/under runline.\n",
+      "Updated gamelogs/game_746453.csv with over/under runline.\n",
       "30\n",
-      "Updated gamelogs/game_745236.csv with over/under runline.\n",
+      "Updated gamelogs/game_745394.csv with over/under runline.\n",
       "31\n",
-      "Updated gamelogs/game_747103.csv with over/under runline.\n",
+      "Updated gamelogs/game_745069.csv with over/under runline.\n",
       "32\n",
-      "Updated gamelogs/game_746285.csv with over/under runline.\n",
+      "Updated gamelogs/game_745556.csv with over/under runline.\n",
       "33\n",
-      "Updated gamelogs/game_746532.csv with over/under runline.\n",
+      "Updated gamelogs/game_746689.csv with over/under runline.\n",
       "34\n",
-      "Updated gamelogs/game_746126.csv with over/under runline.\n",
+      "Updated gamelogs/game_745796.csv with over/under runline.\n",
       "35\n",
-      "Updated gamelogs/game_746859.csv with over/under runline.\n",
+      "Updated gamelogs/game_746934.csv with over/under runline.\n",
       "36\n",
-      "Updated gamelogs/game_745479.csv with over/under runline.\n",
+      "Updated gamelogs/game_746366.csv with over/under runline.\n",
       "37\n",
-      "Updated gamelogs/game_744836.csv with over/under runline.\n",
+      "Updated gamelogs/game_745969.csv with over/under runline.\n",
       "38\n",
-      "Updated gamelogs/game_745725.csv with over/under runline.\n",
+      "Updated gamelogs/game_746205.csv with over/under runline.\n",
       "39\n",
-      "Updated gamelogs/game_746693.csv with over/under runline.\n",
+      "Updated gamelogs/game_747179.csv with over/under runline.\n",
       "40\n",
-      "Updated gamelogs/game_746620.csv with over/under runline.\n",
+      "Updated gamelogs/game_745318.csv with over/under runline.\n",
       "41\n",
-      "Updated gamelogs/game_746046.csv with over/under runline.\n",
+      "Updated gamelogs/game_746688.csv with over/under runline.\n",
       "42\n",
-      "Updated gamelogs/game_747097.csv with over/under runline.\n",
+      "Updated gamelogs/game_746452.csv with over/under runline.\n",
       "43\n",
-      "Updated gamelogs/game_744992.csv with over/under runline.\n",
+      "Updated gamelogs/game_745799.csv with over/under runline.\n",
       "44\n",
-      "Updated gamelogs/game_746533.csv with over/under runline.\n",
+      "Updated gamelogs/game_745967.csv with over/under runline.\n",
       "45\n",
-      "Updated gamelogs/game_745884.csv with over/under runline.\n",
+      "Updated gamelogs/game_745313.csv with over/under runline.\n",
       "46\n",
-      "Updated gamelogs/game_745639.csv with over/under runline.\n",
+      "Updated gamelogs/game_745558.csv with over/under runline.\n",
       "47\n",
-      "Updated gamelogs/game_745398.csv with over/under runline.\n",
+      "Updated gamelogs/game_747011.csv with over/under runline.\n",
       "48\n",
-      "Updated gamelogs/game_745237.csv with over/under runline.\n",
+      "Updated gamelogs/game_745065.csv with over/under runline.\n",
       "49\n",
-      "Updated gamelogs/game_746127.csv with over/under runline.\n",
+      "Updated gamelogs/game_746935.csv with over/under runline.\n",
       "50\n",
+      "Updated gamelogs/game_746367.csv with over/under runline.\n",
+      "51\n",
+      "Updated gamelogs/game_746204.csv with over/under runline.\n",
+      "52\n",
+      "Updated gamelogs/game_747178.csv with over/under runline.\n",
+      "53\n",
+      "Updated gamelogs/game_746450.csv with over/under runline.\n",
+      "54\n",
+      "Updated gamelogs/game_745552.csv with over/under runline.\n",
+      "55\n",
+      "Updated gamelogs/game_745064.csv with over/under runline.\n",
+      "56\n",
+      "Updated gamelogs/game_747012.csv with over/under runline.\n",
+      "57\n",
+      "Updated gamelogs/game_746936.csv with over/under runline.\n",
+      "58\n",
+      "Updated gamelogs/game_745800.csv with over/under runline.\n",
+      "59\n",
+      "Updated gamelogs/game_746685.csv with over/under runline.\n",
+      "60\n",
+      "Updated gamelogs/game_746371.csv with over/under runline.\n",
+      "61\n",
+      "Updated gamelogs/game_746774.csv with over/under runline.\n",
+      "62\n",
+      "Updated gamelogs/game_745965.csv with over/under runline.\n",
+      "63\n",
+      "Updated gamelogs/game_745153.csv with over/under runline.\n",
+      "64\n",
+      "Updated gamelogs/game_746207.csv with over/under runline.\n",
+      "65\n",
+      "Updated gamelogs/game_747175.csv with over/under runline.\n",
+      "66\n",
+      "Updated gamelogs/game_745390.csv with over/under runline.\n",
+      "67\n",
+      "Updated gamelogs/game_745312.csv with over/under runline.\n",
+      "68\n",
+      "Updated gamelogs/game_746447.csv with over/under runline.\n",
+      "69\n",
+      "Updated gamelogs/game_746766.csv with over/under runline.\n",
+      "70\n",
+      "DOUBLEHEADER on 2024-07-13 00:00:00\n",
+      "Updated gamelogs/game_745152.csv with over/under runline.\n",
+      "71\n",
+      "BAD - No matching date found for team 27019 on date 2024-05-24 00:00:00\n",
+      "Updated gamelogs/game_745175.csv with over/under runline.\n",
+      "72\n",
+      "Updated gamelogs/game_745549.csv with over/under runline.\n",
+      "73\n",
+      "Updated gamelogs/game_747013.csv with over/under runline.\n",
+      "74\n",
+      "Updated gamelogs/game_746930.csv with over/under runline.\n",
+      "75\n",
+      "Updated gamelogs/game_745798.csv with over/under runline.\n",
+      "76\n",
+      "Updated gamelogs/game_745067.csv with over/under runline.\n",
+      "77\n",
+      "Updated gamelogs/game_746369.csv with over/under runline.\n",
+      "78\n",
+      "Updated gamelogs/game_746687.csv with over/under runline.\n",
+      "79\n",
+      "Updated gamelogs/game_745963.csv with over/under runline.\n",
+      "80\n",
+      "Updated gamelogs/game_745311.csv with over/under runline.\n",
+      "81\n",
+      "Updated gamelogs/game_745392.csv with over/under runline.\n",
+      "82\n",
+      "Updated gamelogs/game_746202.csv with over/under runline.\n",
+      "83\n",
+      "Updated gamelogs/game_747177.csv with over/under runline.\n",
+      "84\n",
+      "Updated gamelogs/game_747009.csv with over/under runline.\n",
+      "85\n",
+      "Updated gamelogs/game_746932.csv with over/under runline.\n",
+      "86\n",
+      "Updated gamelogs/game_745551.csv with over/under runline.\n",
+      "87\n",
+      "Updated gamelogs/game_746449.csv with over/under runline.\n",
+      "88\n",
+      "Updated gamelogs/game_745797.csv with over/under runline.\n",
+      "89\n",
+      "Updated gamelogs/game_745066.csv with over/under runline.\n",
+      "90\n",
+      "Updated gamelogs/game_746686.csv with over/under runline.\n",
+      "91\n",
+      "Updated gamelogs/game_746370.csv with over/under runline.\n",
+      "92\n",
+      "Updated gamelogs/game_746769.csv with over/under runline.\n",
+      "93\n",
+      "Updated gamelogs/game_745962.csv with over/under runline.\n",
+      "94\n",
+      "Updated gamelogs/game_745151.csv with over/under runline.\n",
+      "95\n",
+      "Updated gamelogs/game_745314.csv with over/under runline.\n",
+      "96\n",
+      "Updated gamelogs/game_746201.csv with over/under runline.\n",
+      "97\n",
+      "Updated gamelogs/game_747176.csv with over/under runline.\n",
+      "98\n",
+      "Updated gamelogs/game_745385.csv with over/under runline.\n",
+      "99\n",
+      "BAD - error for team unknown on date 2024-07-16 00:00:00: HTTP Error 404: Not Found\n",
+      "Updated gamelogs/game_747298.csv with over/under runline.\n",
       "\n",
-      "Games with duplicate dates:\n"
+      "Games with duplicate dates:\n",
+      "Team Oddshark ID: 27019, Year: 2024, Date: 2024-07-10\n",
+      "Team Oddshark ID: 27018, Year: 2024, Date: 2024-07-10\n",
+      "Team Oddshark ID: 27019, Year: 2024, Date: 2024-07-13\n"
      ]
     }
    ],
@@ -149,7 +260,7 @@
     "\n",
     "def update_gamelogs_with_over_under(game_pks_file, gamelogs_folder):\n",
     "    game_pks_df = pd.read_csv(game_pks_file)\n",
-    "    game_pks = game_pks_df['game_id'].tail(50)  # Set the number of recent games to do\n",
+    "    game_pks = game_pks_df['game_id'].tail(100)  # Set the number of recent games to do\n",
     "    duplicates = []\n",
     "    \n",
     "    count = 0\n",
